[package]
name = "only-dice-cmv2-inspectooor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.17.0"
borsh = "0.9.1"
gumdrop = { version = "0.8.0", features = ["default_expr"] }
nft-candy-machine-v2 = { git = "https://github.com/metaplex-foundation/metaplex", features = [ "no-entrypoint" ] }
rusqlite = "0.26.0"
solana-client = "1.7.10"
solana-program = "=1.7.11"
solana-sdk = "1.7.10"
tokio = { version = "1", features = ["full"] }